--- a/templates/countdown.html
+++ b/templates/countdown.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div
-  data-component="countdown"
+  data-fx-component="countdown"
   class="sh-2fa-countdown__text"
   data-hx-get="{{ url }}"
   data-hx-trigger="countdownEnd"
@@ -8,7 +8,7 @@
 >
   <div>
   {% blocktrans with countdown=countdown|default:30 trimmed %}
-    Resend in <span data-countdown-timer>{{ countdown }}</span> seconds
+    Resend in <span data-fx-countdown-ref="timer">{{ countdown }}</span> seconds
   {% endblocktrans %}
   </div>
 </div>
